--- a/css/header.css
+++ b/css/header.css
@@ -54,15 +54,14 @@ header{
 
 #message{
     display: none;
-    position: absolute;
-    right: 4%;
-    top: 135px;
+    position: fixed;
+    top: 0;
+    right: 25%;
+    left: 25%;
     text-align: center;
-    width: 340px;
-    max-width: 90%;
     font-weight: bold;
     padding: 15px 20px;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 .error-message{
@@ -71,7 +70,7 @@ header{
     box-shadow: 0 0 15px -5px #e91d27;
 }
 .success-message{
-    background: #e6e6f1;
+    background: #ffffff;
     border-bottom: 2px solid #12133d;
     box-shadow: 0 0 15px -5px #12133d;
 }
