--- a/css/loader.css
+++ b/css/loader.css
@@ -1,24 +1,21 @@
 .loadPage{
     display: none;
-    background: gray;
+    background: rgba(230, 230, 241, 0.6);
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     bottom: 0;
-    opacity: 0.5;
     z-index: 98;
 }
 .loader-circle {
-    border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid blue;
-    border-right: 16px solid green;
-    border-bottom: 16px solid red;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
+    border: 16px double #12133d;
+    border-top: 16px solid transparent;
+    width: 100px;
+    height: 100px;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
     position: absolute;
     top:0;
     bottom: 0;
